Fixed Spacing

--- a/main2Jonny.css
+++ b/main2Jonny.css
@@ -29,7 +29,7 @@ body.landing #header{
 
 #skillslist2{
 	font-size: 1.25em;
-	padding-left: 6 fem;
+	padding-left: 6em;
 }
 
 #skills{
